# mcxx

./: .Makefile.swp  .cxx03.y.swp  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  LICENSE_HEADER  Makefile  Makefile.OLD  Makefile.am  NEWS  README  README.md  config.rpath  configure.ac  cxx-ast.c  cxx-ast.h  cxx-lexer.h  cxx03.l  cxx03.y  regenerate.sh
config/: 00.config.plain.in  10.config.omp-base.in  10.config.sscc-common.in  50.config.cuda.in  50.config.ocl.in  50.config.omp.fortran.in  50.config.omp.intel.in  50.config.omp.mercurium.in  50.config.omp.profiling.in  50.config.stm_nebelung.in  50.config.superscalar.in  55.config.omp.ibm.in  55.config.omp.nvidia.in  57.config.omp.smp  Makefile.am  Makefile.replace  config.acotes  config.acotes-msf.in  config.acotes.in  config.cuda.in  config.gpu.in  config.mcxx  config.mcxx.in  config.mcxx.in.nanos  config.nanos4.in  config.nanos_omp.in  config.nanox.in  config.ocl  config.omp.in  config.plain.in  config.ss2omp.in  config.ss_valgrind.in  config.sscc.in  config.stm_nebelung.in  config.superscalar.in  replace.sh.in  template.00.config.plain  template.01.config.intel-plain  template.02.config.utilities  template.10.config.analysis-base  (+40 more)
doc/: Makefile.am  doxygen_tl.in  mcxx-internals.texi  mcxx-tl.texi
doc/md_pages/: build_requirements.md  configure_flags.md  profiles.md
lib/: Makefile.am  char_hash.c  char_trie.c  dhash_ptr.c  dhash_ptr.h  dhash_str.c  dhash_str.h  extstruct.c  extstruct.h  filename.c  filename.h  gcstring.c  gcstring.h  getopt.c  getopt.h  getopt1.c  hash.c  hash.h  hash_iterator.c  hash_iterator.h  iterator.c  iterator.h  libutils-common.h  list.c  list.h  list_iterator.c  list_iterator.h  mcfg.c  mcfg.h  mcxx_refcount.c  mcxx_refcount.h  mem.c  mem.h  mem_ctl.c  mem_ctl.h  perish.c  red_black_tree.c  red_black_tree.h  s_types.h  slow_char_trie.c  (+5 more)
scripts/: Makefile.am  apply_license.sh  bison-2.3-rofi-patch  builtins-common.hpp  builtins_ia32.cpp  builtins_ia32_sse.cpp  check_copyright.sh  check_copyright_file.sh  clang-format  copyright_excludes.txt  file_name_match.py  fix-libtool.patch  get_year_of_file.sh  gmcxx  headache.cfg  massif-run.sh  mcxx-rpm.spec  pre-commit-hook  preamble.txt  setup-hooks.sh  summary.txt
scripts/debian/: control  rules
scripts/lit/: PKG-INFO
scripts/simd/: builtins-common-icc.hpp  builtins-common.hpp
src/: Makefile.am  Makefile.in  c99.l  c99.y  c99.y.in  cxx-ambiguities.c  cxx-ambiguities.h  cxx-ambiguity.c  cxx-ambiguity.h  cxx-ast-decls.h  cxx-ast.c  cxx-ast.h  cxx-asttype.def  cxx-attrnames.def  cxx-buildscope-decls.h  cxx-buildscope.c  cxx-buildscope.h  cxx-buildsymtab.c  cxx-buildsymtab.h  cxx-cexpr.c  cxx-cexpr.h  cxx-compilerphases.cpp  cxx-compilerphases.hpp  cxx-configfile.c  cxx-configfile.h  cxx-configoptions.gperf  cxx-construct.y  cxx-debugflags.gperf  cxx-driver-decls.h  cxx-driver.c  cxx-driver.h  cxx-dyninit.c  cxx-dyninit.h  cxx-exprtype.c  cxx-exprtype.h  cxx-extensions.gperf  cxx-fileextensions.gperf  cxx-graphviz.c  cxx-graphviz.h  cxx-instantiation.c  (+39 more)
src/driver/: Makefile.am  cxx-configfile-lexer.h  cxx-configfile-lexer.l  cxx-configfile-parser.h  cxx-configfile-parser.y  cxx-configfile.c  cxx-configfile.h  cxx-configoptions.gperf  cxx-debugflags.gperf  cxx-driver-build-info.h.in  cxx-driver-decls.h  cxx-driver-utils.c  cxx-driver-utils.h  cxx-driver-vars.c  cxx-driver.c  cxx-driver.h  cxx-embed.c  cxx-embed.h  cxx-embedder.c  cxx-fileextensions.gperf  cxx-multifile.c  cxx-multifile.h  cxx-parameters.c  cxx-parameters.h  cxx-profile.c  cxx-profile.h
src/frontend/: Makefile.am  builtins_ia32_sse.cpp  c99-parser.h  c99-upc.y  c99.y.in  cxx-ambig-handler.y  cxx-ambiguity.c  cxx-ambiguity.h  cxx-ast-decls.h  cxx-ast-fwd.h  cxx-ast-inline.h  cxx-ast.c  cxx-ast.h  cxx-asttype-all.def  cxx-asttype-base.def  cxx-asttype-cuda.def  cxx-asttype-extensions.def  cxx-asttype-fortran.def  cxx-asttype-gcc.def  cxx-asttype-intel.def  cxx-asttype-ms.def  cxx-asttype-nodecl.def  cxx-asttype-omp.def  cxx-asttype-ompss.def  cxx-asttype-opencl.def  cxx-asttype-pragma.def  cxx-asttype-str.c  cxx-asttype-str.h  cxx-asttype-superscalar.def  cxx-asttype-upc.def  cxx-asttype-xl.def  cxx-asttype.def  cxx-attrnames.def  cxx-buildscope-decls.h  cxx-buildscope.c  cxx-buildscope.h  cxx-cexpr-decls.h  cxx-cexpr-deep-copy.c  cxx-cexpr-deep-copy.h  cxx-cexpr-fwd.h  (+139 more)
src/mcxx_tl/: Makefile.am  cxx-compilerphases.cpp  cxx-compilerphases.hpp
src/tl/: Makefile.am  Makefile.in  Makefile.phases  Makefile.tl  tl-ast.cpp  tl-ast.hpp  tl-builtin.cpp  tl-builtin.hpp  tl-clauses-info.cpp  tl-clauses-info.hpp  tl-common.hpp  tl-compilerphase.cpp  tl-compilerphase.hpp  tl-compilerpipeline.cpp  tl-compilerpipeline.hpp  tl-context.cpp  tl-context.hpp  tl-contextlink.cpp  tl-contextlink.hpp  tl-counters.cpp  tl-counters.hpp  tl-cuda.cpp  tl-datareference.cpp  tl-datareference.hpp  tl-declarationclosure.cpp  tl-declarationclosure.hpp  tl-dto.cpp  tl-dto.hpp  tl-externalvars.cpp  tl-externalvars.hpp  tl-for-nest.cpp  tl-for-nest.hpp  tl-fortran.cpp  tl-fortran.hpp  tl-functor.cpp  tl-functor.hpp  tl-generic_vector.hpp  tl-handler.cpp  tl-handler.hpp  tl-instrumentation.cpp  (+82 more)
support/iso_fortran/: Makefile.am  iso_c_binding.f90  iso_fortran_env.f90  iso_fortran_env_generator.f90
tests/: Makefile.am  hlt_libs.conf  lit.site.cfg  nanos4_libs.conf  nanos4_libs_instr.conf  openmp_libs.conf  openmp_libs_instr.conf  superscalar_libs.conf
tests/01_fortran.dg/: fail_intrinsics_01.f90  fail_intrinsics_02.f90  fail_intrinsics_03.f90  failure_basic_001.f95  failure_basic_002.f95  failure_basic_003.f95  failure_basic_004.f95  failure_derived_type_name_01.f90  failure_derived_type_name_02.f90  failure_derived_type_name_03.f90  failure_derived_type_name_04.f90  failure_div_operation_01.f90  failure_dummy_arguments_01.f90  failure_entry_statement_01.f90  failure_explicit_function_result_01.f90  failure_generic_spec_01.f90  failure_intent_01.f90  failure_interface_01.f95  failure_intrinsics_01.f90  failure_intrinsics_02.f90  failure_intrinsics_03.f90  failure_intrinsics_04.f90  (+659 more)
(+5818 files in other folders)
